<resources>
    <string name="app_name">TrollaHealthSDK</string>
    <string name="freshchat_file_provider_authority">io.instastack.coshop.com.trolla.healthsdk.provider</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_couldnt_reach_server">\"Oops! Couldn\'t reach server. Check your internet connection.\"</string>
    <string name="notification_channel_id_default">1000</string>
    <string name="notification_channel_name_default">General</string>
    <string name="notification_channel_description_default">General push notifications</string>
    <string name="oops_something_went_wrong">\"Oops! Something went wrong. Please try again.\"</string>
    <string name="server_not_reachable">Server not reachable at this time, we are looking into it</string>
    <string name="welcome">Welcome</string>
    <string name="enter_email">Enter Email</string>
    <string name="skip">Skip</string>
    <string name="medicines_at_your_doorstep">Medicines at Your Doorstep</string>
    <string name="log_in">Log In</string>

    <string name="onboarding_slide1_title">Buy Medicines &amp; Groceries</string>
    <string name="onboarding_slide2_title">Money Saving Deals</string>
    <string name="onboarding_slide3_title">Get Fast Delivery 24 x 7</string>

    <string name="onboarding_slide1_subtitle">Order quality medicines &amp; daily products online</string>
    <string name="onboarding_slide2_subtitle">Get offers, coupons, deals and points the more you shop.</string>
    <string name="onboarding_slide3_subtitle">Our stores are open 24x7 &amp; are at your service at all times</string>
    <string name="proceed">Proceed</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="din_t_receive_otp_resend_otp">Didn\'t receive OTP? Resend OTP</string>
    <string name="enter_otp_sent_to">Enter otp sent to</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="wrong_otp_entered">Wrong OTP Entered</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_not_updated">Something wen\'t wrong. Profile not updated</string>
    <string name="search_for_products">Search for Products</string>
    <string name="categories">Categories</string>
    <string name="featured_brands">Featured Brands</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="recommended">Recommended</string>
    <string name="trending_products">Trending Products</string>
    <string name="show_all">Show All</string>
    <string name="amount_string">\u20B9 %s</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="product_description">Product Description</string>
    <string name="Uses">Uses</string>
    <string name="Benefits">Benifits</string>
    <string name="storage_conditions">Storage Conditions</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="prescription_not_required">Prescription not required</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="my_prescriptions">My Prescriptions</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="payment_details">Payment Details</string>
    <string name="cart_total">Cart Total</string>
    <string name="gst">GST</string>
    <string name="delivery">Delivery</string>
    <string name="to_be_paid">To be paid</string>
    <string name="prescription_required">Prescription required</string>
    <string name="upload_new_prescription">+ Upload New</string>
    <string name="add_new">+ Add New</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enter_contact_name">Enter Contact Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="save_address">Save Address</string>
    <string name="name_this_location">Name this location</string>
    <string name="amount">\u20B9 %s</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="go_to_homepage">Go to Homepage</string>
    <string name="track_order">Track Order</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="discount">Discount</string>
    <string name="expiry">Expiry:</string>
    <string name="country_of_origin">Country Of Origin</string>
    <string name="uploaded_prescriptions">Uploaded prescriptions</string>
    <string name="order_total">Order Total</string>
    <string name="price_may_vary_depending_on_the_product_batch">Price may vary depending on the product batch*</string>
    <string name="out_of_stock">Out Of Stock</string>
</resources>