<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginEmailViewModel"
            type="com.trolla.healthsdk.feature_auth.presentation.LoginEmailViewModel" />
    
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/margin24dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    style="@style/trolla_fontH1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="@dimen/textBigSize" />


                <TextView
                    style="@style/trolla_fontMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_your_account"
                    android:textColor="#4D4D4D"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin32dp"
                    android:hint="@string/enter_email"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/borderColor"
                    app:boxStrokeWidth="1dp"
                    app:errorEnabled="true"
                    app:error="@{loginEmailViewModel.emailValidator.error}"
                    app:hintTextColor="@color/textHintColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        style="@style/trolla_fontMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={loginEmailViewModel.emailLiveData}"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textColor1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:enabled="@{loginEmailViewModel.isLoginFormValidMediator}"
                    android:id="@+id/txtLogin"
                    style="@style/trolla_fontSemibold"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin48dp"
                    android:layout_marginTop="@dimen/margin32dp"
                    android:background="@drawable/bg_inactivebutton"
                    android:gravity="center"
                    android:text="@string/proceed"
                    android:textColor="@color/inactiveTextColor" />

                <TextView
                    style="@style/trolla_fontMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin48dp"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="#4D4D4D" />


            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>