<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pageBackgroundColor"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_order_confirmed" />

            <TextView
                android:gravity="center"
                android:layout_marginEnd="@dimen/margin16dp"
                android:layout_marginStart="@dimen/margin16dp"
                style="@style/trolla_fontBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/order_confirmed"
                android:textColor="@color/textColor1" />

            <TextView
                android:gravity="center"
                android:id="@+id/txtOrderDetails"
                style="@style/trolla_fontMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin16dp"
                android:layout_marginEnd="@dimen/margin16dp"
                android:text="@string/order_confirmed"
                android:textColor="@color/textColor2"
                android:textSize="15sp" />

            <TextView
                android:gravity="center"
                android:id="@+id/txtPaymentRedirectionMessage"
                style="@style/trolla_fontBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin16dp"
                android:layout_marginEnd="@dimen/margin16dp"
                android:text="Please wait"
                android:textColor="@color/textColor2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtGotoHomePage"
                style="@style/trolla_fontMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin16dp"
                android:layout_marginEnd="@dimen/margin16dp"
                android:background="@drawable/bg_rounded_primarybutton"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/go_to_homepage"
                android:textColor="@color/primary_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtTrackOrder"
                style="@style/trolla_fontMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin16dp"
                android:layout_marginEnd="@dimen/margin16dp"
                android:background="@drawable/bg_primarybutton"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/track_order"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>